  (Richard Jones)
- PR#6017, PR#7034, GPR#267: More efficient ifprintf implementation
  (Jeremy Yallop, review by Gabriel Scherer)
- PR#6296: Some documentation on the floating-point representations
    recognized by Pervasives.float_of_string
  (Xavier Leroy)
- PR#6316: Scanf.scanf failure on %u formats when reading big integers
  (Xavier Leroy, Benoît Vaugon)
- PR#6390, GPR#36: expose Sys.{int_size,max_wosize} for improved js_of_ocaml
  portability (Hugo Heuzard)
* PR#6494: Add equal function in modules
  Bytes, Char, Digest, Int32, Int64, Nativeint, and String
  (Romain Calascibetta)
* PR#6524, GPR#79: Filename: Optional ?perms argument to open_temp_file
  (Daniel Bünzli, review by Jacques-Pascal Deplaix)
- PR#6577: improve performance of %L, %l, %n, %S, %C format specifiers
  (Alain Frisch)
- PR#6585: fix memory leak in win32unix/createprocess.c
- PR#6649, GPR#222: accept (int_of_string "+3")
  (Christopher McAlpine)
- PR#6645, GPR#174: Guarantee that Set.add, Set.remove, Set.filter
  return the original set if no change is required (Alain Frisch,
  Mohamed Iguernlala)
- GPR#175: Guarantee that Map.add, Map.remove, Map.filter
  return the original map if no change is required.
  (Mohamed Iguernlala)
- PR#6694, PR#6695: deprecate functions using ISO-8859-1 character set
  in Char, Bytes, String and provide alternatives using US-ASCII.
  (whitequark)
- GPR#164: more efficient (branchless) implementation of Pervasives.compare
  specialized at type 'float'.
  (Vladimir Brankov)
- GPR#201: generalize types of Printf.{ifprintf,ikfprintf}
  (Maxence Guesdon)
- GPR#216: add the missing POSIX.1-2001 signals in Sys
  (Guillaume Bury)
- GPR#239: remove type-unsafe code from Stream
  (Pierre Chambart, review by Gabriel Scherer and Jeremy Yallop)
- GPR#250: Check for negative start element in Array.sub
  (report and fix by Jeremy Yallop)
- GPR#265: new implementation of Queue avoiding Obj.magic
  (Jérémie Dimino)